cluster/apps/external/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pihole
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5005

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app pihole
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.69.101
    ports:
      - port: 5005
