cluster/apps/external/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pihole-ui
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: "external-add-pihole-admin-internal@kubernetescrd"
spec:
  ingressClassName: "traefik"
  rules:
    - host: &host pihole.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.${SECRET_DOMAIN}
      secretName: pihole-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-pihole-admin
  namespace: external
spec:
  addPrefix:
    prefix: "/admin"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-pihole-admin-internal
  namespace: external
spec:
  chain:
    middlewares:
      - name: external-add-pihole-admin@kubernetescrd
